VZDEV/src/objects/CCPM_EventSMSSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>CCPM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_CalculateSMSFollowup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate SMS Followup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_EndDate__c</fullName>
        <description>Text field to Keep the Date constant in all user time zones</description>
        <label>End Date</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_JourneyMessageName__c</fullName>
        <label>Journey Message Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_LeadEventType__c</fullName>
        <label>Lead Event Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_LeadRecordType__c</fullName>
        <label>Lead Record Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_SendNextBusinessDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Next Business Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_SmsFollowUpEndDate__c</fullName>
        <label>Sms Follow Up End Date</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_SmsFollowUpOverrideDate__c</fullName>
        <label>Sms Follow Up OverrideDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_SmsFollowUpStartDate__c</fullName>
        <label>Sms Follow Up Start Date</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_StartDate__c</fullName>
        <label>Start Date</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_overrideEcode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Ecode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_type__c</fullName>
        <label>Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Event SMS Setting</label>
    <pluralLabel>Event SMS Settings</pluralLabel>
</CustomObject>